--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,9 @@
     "dev": "next -p 7777",
     "build": "next build",
     "start": "next start -p 7777",
-    "test": "NODE_ENV=test jest --watch"
+    "test": "NODE_ENV=test jest --watch",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +19,7 @@
     "@apollo/react-ssr": "^4.0.0",
     "@stripe/react-stripe-js": "^1.6.0",
     "@stripe/stripe-js": "^1.19.1",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
     "apollo-upload-client": "^16.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-plugin-styled-components": "^1.12.0",
@@ -45,11 +48,13 @@
     "@testing-library/user-event": "^13.2.1",
     "@types/react": "^17.0.27",
     "@types/styled-components": "^5.1.15",
+    "@typescript-eslint/parser": "^5.0.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^27.2.4",
     "casual": "^1.6.2",
     "eslint": "^7.14.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-typescript": "^14.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-wesbos": "^2.0.1",
     "eslint-plugin-html": "^6.1.1",
@@ -87,10 +92,21 @@
             ".tsx"
           ]
         }
+      ],
+      "no-console": 2,
+      "prettier/prettier": [
+        "error",
+        {
+          "trailingComma": "es5",
+          "singleQuote": true,
+          "printWidth": 120,
+          "useTabs": false,
+          "tabWidth": 2
+        }
       ]
     },
     "extends": [
-      "wesbos"
+      "wesbos/typescript"
     ]
   },
   "jest": {
