--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@apollo/react-ssr": "^4.0.0",
     "@stripe/react-stripe-js": "^1.6.0",
     "@stripe/stripe-js": "^1.19.1",
+    "@types/nprogress": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "apollo-upload-client": "^16.0.0",
     "babel-core": "^7.0.0-bridge.0",
