feat(finished auth)

--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 CLOUDINARY_CLOUD_NAME=omg
 CLOUDINARY_KEY=lol
 CLOUDINARY_SECRET=yarite
-COOKIE_SECRET="sickFitsGraphQLKKK"
+COOKIE_SECRET="sickFitsGraphQLKKKBackendProject"
 DATABASE_URL=mongodb+srv://sick-fits:tbTg2PCvzITt8DK2@sick-fits.ap0j1.mongodb.net/sickFitsDB?retryWrites=true&w=majority
 STRIPE_SECRET="sk_test_nahhhh"
 MAIL_HOST="smtp.ethereal.email"
