feat(Configure apollo client to support ssg, ssr, and fully typed

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -21,9 +21,12 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
-, "pages/_app.js"  ],
+    "**/*.tsx",
+    "**/*.js",
+    "**/*.jsx"
+  ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    ".next"
   ]
 }
