--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@apollo/client": "^3.4.16",
+    "@apollo/client": "^3.4.17",
     "@apollo/link-error": "^2.0.0-beta.3",
     "@apollo/react-ssr": "^4.0.0",
     "@stripe/react-stripe-js": "^1.6.0",
@@ -25,13 +25,16 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-plugin-styled-components": "^1.12.0",
     "date-fns": "^2.25.0",
+    "deepmerge": "^4.2.2",
     "downshift": "^6.0.6",
-    "graphql": "^15.6.1",
-    "graphql-tag": "^2.11.0",
+    "graphql": "^16.0.1",
+    "graphql-tag": "^2.12.6",
     "graphql-upload": "^12.0.0",
+    "isomorphic-unfetch": "^3.1.0",
+    "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "next": "11.1.2",
-    "next-with-apollo": "^5.1.1",
+    "next-with-apollo": "^5.2.1",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
@@ -47,6 +50,8 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.2.1",
+    "@types/apollo-upload-client": "^14.1.0",
+    "@types/lodash": "^4.14.176",
     "@types/react": "^17.0.27",
     "@types/styled-components": "^5.1.15",
     "@typescript-eslint/parser": "^5.0.0",
@@ -83,6 +88,14 @@
       }
     },
     "rules": {
+      "no-tabs": 2,
+      "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
+      "react/prop-types": "off",
+      "react/react-in-jsx-scope": "off",
+      "jsx-a11y/anchor-is-valid": "off",
+      "@typescript-eslint/no-unused-vars": ["error"],
+      "@typescript-eslint/explicit-function-return-type": "off",
+      "@typescript-eslint/explicit-module-boundary-types": "off",
       "react/jsx-filename-extension": [
         2,
         {
