--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@stripe/react-stripe-js": "^1.6.0",
     "@stripe/stripe-js": "^1.19.1",
     "@types/nprogress": "^0.2.0",
+    "@types/react-transition-group": "^4.4.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "apollo-upload-client": "^16.0.0",
     "babel-core": "^7.0.0-bridge.0",
@@ -89,11 +90,18 @@
     },
     "rules": {
       "no-tabs": 2,
-      "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
+      "import/no-extraneous-dependencies": [
+        "error",
+        {
+          "devDependencies": true
+        }
+      ],
       "react/prop-types": "off",
       "react/react-in-jsx-scope": "off",
       "jsx-a11y/anchor-is-valid": "off",
-      "@typescript-eslint/no-unused-vars": ["error"],
+      "@typescript-eslint/no-unused-vars": [
+        "error"
+      ],
       "@typescript-eslint/explicit-function-return-type": "off",
       "@typescript-eslint/explicit-module-boundary-types": "off",
       "react/jsx-filename-extension": [
